Re-aligned images and text. Personalsied my own content to include my trips.

--- a/index.html
+++ b/index.html
@@ -16,51 +16,62 @@
         <div class="pagecontainer"> <!-- this box will be the overall container that contains all subsequent boxes -->
             <!-- section 1/4, dark blue headers and images part -->
             <div class="topheaderbox"> <!-- flex so items plaxced adajcent -->
-                <div class="headerlogo"> Header Logo </div>
-                <div class="headerlinks"> <a href=""> header link one </a> </div>
-                <div class="headerlinks"> <a href=""> header link two </a> </div>
-                <div class="headerlinks"> <a href=""> header link three </a> </div>
+                <div class="headerlogo" style="font-family: 'Hero New', sans-serif;"> Vaksor </div>
+                <div class="headerlinks"> <a href=""> Central Vietnam </a> </div>
+                <div class="headerlinks"> <a href=""> Southern Vietnam </a> </div>
+                <div class="headerlinks"> <a href=""> Northen Vietnam </a> </div>
             </div>
 
             <div class="pagedescription_mainbox"> <!-- display should be block as we one items(paras) stacked vertically down -->
                 <div class="pagedescription_textbox">
-                    <div style="font-family: 'Hero New', sans-serif; font-size: 48px; font-weight: bolder; color: #F9FAF8; line-height: 1.2;"> The Fermi Paradox </div>
-                    <div style="color: #E5E7EB; font-family: 'Hero New', sans-serif; font-size: 18px; margin-top: 12px;"> The Fermi Paradox seeks to answer the question of where the aliens are. 
-
-                        Given that our solar system is quite young compared to the rest of the universe — roughly 4.5 billion years old, compared to 13.8 billion — and that interstellar travel might be fairly easy to achieve given enough time, Earth should have been visited by aliens already, the idea goes.  </div>
-                    <button class="signup_button button_one"> Sign up </button>
+                    <div style="font-family: 'Hero New', sans-serif; font-size: 48px; font-weight: bolder; color: #F9FAF8; line-height: 1.2;"> Finding happiness </div>
+                    <div style="color: #E5E7EB; font-family: 'Hero New', sans-serif; font-size: 18px; margin-top: 12px;"> A toast to these kids. I cannot stress how impressed and happy these kids made me that day. My friend and I were both doubtful of their styrofoam boat working. But not only did it work, it carried all 3 of them. They then went to get a stick to maneuver the boat. Before finally using the red shirt as a flag to top it all off. Absolute geniuses. </div>
+                    <button class="signup_button button_one"> Read more </button>
                 </div>  
-                    <img src="./images/camboboat.jpg" alt="Picture of a boat docked at shore, in front of a beautiful sunset in Cambodia" height="auto" width="550">
+                    <img src="./images/boatkids.JPG" alt="Picture of 3 Vietnamese boys playing with their styrofoam boat in the rock pools by the sea." height="auto" width="600">
             </div>
                 
             <!-- section 2/4, white random information part -->
-            <div class="second_section_container"> <!-- display block so vertical stacking -->
-                <div class="second_section_header"> Some random information. </div>
+            <div class="second_section_main_container"> <!-- display block so vertical stacking -->
 
-                <div class="second_section_items"> <!-- display flex so adjacent stacking -->
-                    <div class="imagecontainer"> 
-                        <img src="./images/floatinghouse.jpg" alt="Image of house in lake in Vietnam" height="auto" width="300">
-                        <div class="text"> This is some subtext under an illustration or image </div>
+                <div class="second_section_header"> Some pictures from my Vietnam and Cambodia trips. </div>
+
+                <div class="second_section_body_container">
+
+                    <div class="image_container">  <!-- display flex so adjacent stacking -->
+                        <div class="imagebox">
+                            <img src="./images/floatinghouse.jpg" alt="Image of house in lake in Vietnam" height="auto" width="300">
+                            <div class="text"> A house in the tranquil lake before Hai Van Pass.</div>
+                        </div>
+                        <div class="imagebox">
+                            <img src="./images/boatindanang.jpg" alt="Image of a boat in a quiet lake" height="auto" width="300">
+                            <div class="text"> A boat in the middle of a vast lake. Shot from a bridge in Da Nang. </div>
+                        </div>
+                        <div class="imagebox">
+                            <img src="./images/preyvengsunset.jpg" alt="Image of the entrance gravel road to the Prey Veng Village, with a beautiful sunset" height="225" width="300">
+                            <div class="text"> The gravel road entrance to the Prey Veng Village, with a beautiful sunset to end it all off on our last night there. </div>
+                        </div>
+                        <div class="imagebox">
+                            <img src="./images/thanhmy.jpg" alt="Image of the streets of Thanh My. With a beautiful purple-pink sunset." height="auto" width="300">
+                            <div class="text"> The beautiful streets of Thanh My. Arguably my favourite little town of all the towns I have visited in Vietnam.</div>
+                        </div>  
                     </div>
-                    <div class="imagecontainer"> 
-                        <img src="./images/floatinghouse.jpg" alt="Image of house in lake in Vietnam" height="auto" width="300">
-                        <div class="text"> This is some subtext under an illustration or image </div>
-                    </div>
-                    <div class="imagecontainer"> 
-                        <img src="./images/floatinghouse.jpg" alt="Image of house in lake in Vietnam" height="auto" width="300">
-                        <div class="text"> This is some subtext under an illustration or image </div>
-                    </div>
-                    <div class="imagecontainer"> 
-                        <img src="./images/floatinghouse.jpg" alt="Image of house in lake in Vietnam" height="auto" width="300">
-                        <div class="text"> This is some subtext under an illustration or image </div>
-                    </div>
+
+               <!--  <div class="image_text_container">
+                        <div class="text"> A house in the tranquil lake before Hai Van Pass.</div>
+                        <div class="text"> A boat in the middle of a vast lake. Shot from a bridge in Da Nang. </div>
+                        <div class="text"> The gravel road entrance to the Prey Veng Village, with a beautiful sunset to end it all off on our last night there. </div>
+                        <div class="text"> The beautiful streets of Thanh My. Arguably my favourite little town of all the towns I have visited in Vietnam.</div>
+                    </div> 
+                -->
+
                 </div>
             </div>
 
             <!-- section 3/4, quote box -->
             <div class="third_section_container">
-                <div class="quote_container"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </div>
-                <div class="quote_credits"> -Thor, God of Thunder </div>
+                <div class="quote_container"> "Children are happy because they have the power of finding happiness in the simplest things." </div>
+                <div class="quote_credits"> -Debasih Mridha </div>
             </div>
 
             <!-- 4/4 section, sign up container-->
