Fixed button_one from filling up window
Added max-width to it

Added Taddy Mason joke at bottom

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="pagecontainer"> <!-- this box will be the overall container that contains all subsequent boxes -->
             <!-- section 1/4, dark blue headers and images part -->
             <div class="topheaderbox"> <!-- flex so items plaxced adajcent -->
-                <div class="headerlogo" style="font-family: 'Hero New', sans-serif;"> Vaksor </div>
+                <div class="headerlogo" style="font-family: 'Hero New', sans-serif;"> TristanBale </div>
                 <div class="headerlinks"> <a href=""> Central Vietnam </a> </div>
                 <div class="headerlinks"> <a href=""> Southern Vietnam </a> </div>
                 <div class="headerlinks"> <a href=""> Northen Vietnam </a> </div>
@@ -28,7 +28,7 @@
                     <div style="color: #E5E7EB; font-family: 'Hero New', sans-serif; font-size: 18px; margin-top: 12px;"> A toast to these kids. I cannot stress how impressed and happy these kids made me that day. My friend and I were both doubtful of their styrofoam boat working. But not only did it work, it carried all 3 of them. They then went to get a stick to maneuver the boat. Before finally using the red shirt as a flag to top it all off. Absolute geniuses. </div>
                     <button class="signup_button button_one"> Read more </button>
                 </div>  
-                    <img src="./images/boatkids.JPG" alt="Picture of 3 Vietnamese boys playing with their styrofoam boat in the rock pools by the sea." height="auto" width="600">
+                    <img src="./images/boatkids.JPG" alt="Picture of 3 Vietnamese boys playing with their styrofoam boat in the rock pools by the sea." height="auto" width="600" style="margin-left:auto;">
             </div>
                 
             <!-- section 2/4, white random information part -->
@@ -77,8 +77,8 @@
             <!-- 4/4 section, sign up container-->
             <div class="forth_section_container"> <!-- flex just for alignment, inside only 1 container -->
                 <div class="blue_sign_up_container"> <!-- flex so the 2 child are adjacent-->
-                    <div class="call_to_action"> Call to action! It's time! <p style="font-size: 20px; font-weight: 500; margin: 0px;"> Sign up for our product by clicking that button right over there! </p> </div>
-                    <button class="signup_button button_two"> Sign up </button>
+                    <div class="call_to_action"> I'm Taddy Mason! I will share all about my trips! <p style="font-size: 20px; font-weight: 500; margin: 0px;"> Click that button to talk now for a low low price of $1.99 a minute! </p> </div>
+                    <button class="signup_button button_two"> Call now! </button>
                 </div>
             </div>
 
